MiniCSharp/parser.output
Terminals which are not used

   EXTENDS
   INSTANCEOF


Grammar

    0 $accept: root $end

    1 root: /* empty */
    2     | root class

    3 class: CLASS IDENT '{' members '}'
    4      | CLASS IDENT ':' IDENT '{' members '}'

    5 members: /* empty */
    6        | members member

    7 member: global
    8       | constructor
    9       | function

   10 global: accessmodif type variables ';'
   11       | type variables ';'

   12 constructor: IDENT '(' args_e ')' '{' statements '}'
   13            | accessmodif IDENT '(' args_e ')' '{' statements '}'

   14 @1: /* empty */

   15 function: accessmodif type IDENT '(' @1 args_e ')' '{' statements '}'

   16 @2: /* empty */

   17 function: accessmodif VOID IDENT '(' @2 args_e ')' '{' statements '}'

   18 @3: /* empty */

   19 function: type IDENT '(' @3 args_e ')' '{' statements '}'

   20 @4: /* empty */

   21 function: VOID IDENT '(' @4 args_e ')' '{' statements '}'

   22 arg: type IDENT

   23 args: arg
   24     | args ',' arg

   25 args_e: /* empty */
   26       | args

   27 variables: variable
   28          | variables ',' variable

   29 variable: IDENT
   30         | IDENT '=' expr

   31 accessmodif: PRIVATE
   32            | STATIC
   33            | PRIVATE STATIC

   34 type: noarraytype
   35     | arraytype

   36 noarraytype: IDENT
   37            | basictype

   38 basictype: BOOLEAN
   39          | INT
   40          | DOUBLE

   41 arraytype: IDENT '[' ']'
   42          | IDENT '[' ',' ']'
   43          | IDENT '[' ',' ',' ']'
   44          | basictype '[' ']'
   45          | basictype '[' ',' ']'
   46          | basictype '[' ',' ',' ']'

   47 expr: INCREMENT IDENT
   48     | DECREMENT IDENT
   49     | IDENT INCREMENT
   50     | IDENT DECREMENT
   51     | '!' expr
   52     | '-' expr
   53     | '+' expr
   54     | '(' expr ')'
   55     | qualnameorarray
   56     | qualnameorarray '=' expr
   57     | qualifiedname '(' expr_list_e ')'
   58     | qualifiedname '(' expr_list_e ')' arrayindex
   59     | NEW IDENT '(' expr_list_e ')'
   60     | NEW IDENT arrayindex
   61     | expr EQ expr
   62     | expr NE expr
   63     | expr '<' expr
   64     | expr SE expr
   65     | expr '>' expr
   66     | expr LE expr
   67     | expr '+' expr
   68     | expr '-' expr
   69     | expr '*' expr
   70     | expr '/' expr
   71     | expr '%' expr
   72     | expr AND expr
   73     | expr OR expr
   74     | expr IS type
   75     | '(' basictype ')' expr
   76     | INTEGER
   77     | REAL
   78     | TRUE
   79     | FALSE
   80     | THIS
   81     | NUL

   82 arrayindex: '[' expr ']'
   83           | '[' expr ',' expr ']'
   84           | '[' expr ',' expr ',' expr ']'

   85 qualifiedname: IDENT
   86              | expr '.' IDENT

   87 qualnameorarray: IDENT
   88                | IDENT arrayindex
   89                | expr '.' IDENT
   90                | expr '.' IDENT arrayindex

   91 expr_list: expr
   92          | expr_list ',' expr

   93 expr_list_e: /* empty */
   94            | expr_list

   95 statement: IF '(' expr ')' statement
   96          | IF '(' expr ')' statement ELSE statement
   97          | WHILE '(' expr ')' statement
   98          | FOR '(' variables_e ';' expr_e ';' expr_e ')' statement
   99          | expr ';'
  100          | type variables ';'

  101 @5: /* empty */

  102 statement: '{' @5 statements '}'
  103          | RETURN expr_e ';'

  104 statements: /* empty */
  105           | statements statement

  106 variables_e: /* empty */
  107            | type variables

  108 expr_e: /* empty */
  109       | expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 51
'%' (37) 71
'(' (40) 12 13 15 17 19 21 54 57 58 59 75 95 96 97 98
')' (41) 12 13 15 17 19 21 54 57 58 59 75 95 96 97 98
'*' (42) 69
'+' (43) 53 67
',' (44) 24 28 42 43 45 46 83 84 92
'-' (45) 52 68
'.' (46) 86 89 90
'/' (47) 70
':' (58) 4
';' (59) 10 11 98 99 100 103
'<' (60) 63
'=' (61) 30 56
'>' (62) 65
'[' (91) 41 42 43 44 45 46 82 83 84
']' (93) 41 42 43 44 45 46 82 83 84
'{' (123) 3 4 12 13 15 17 19 21 102
'}' (125) 3 4 12 13 15 17 19 21 102
error (256)
IDENT (258) 3 4 12 13 15 17 19 21 22 29 30 36 41 42 43 47 48 49 50
    59 60 85 86 87 88 89 90
INTEGER (259) 76
REAL (260) 77
CLASS (261) 3 4
BOOLEAN (262) 38
DOUBLE (263) 40
INT (264) 39
IS (265) 74
IF (266) 95 96
ELSE (267) 96
WHILE (268) 97
FOR (269) 98
FALSE (270) 79
TRUE (271) 78
EXTENDS (272)
INSTANCEOF (273)
NEW (274) 59 60
THIS (275) 80
NUL (276) 81
PRIVATE (277) 31 33
STATIC (278) 32 33
VOID (279) 17 21
RETURN (280) 103
IF_PREC (281)
OR (282) 73
AND (283) 72
NE (284) 62
EQ (285) 61
SE (286) 64
LE (287) 66
UNARY_OP (288)
DECREMENT (289) 48 50
INCREMENT (290) 47 49
change_type (291)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
root (57)
    on left: 1 2, on right: 0 2
class (58)
    on left: 3 4, on right: 2
members (59)
    on left: 5 6, on right: 3 4 6
member (60)
    on left: 7 8 9, on right: 6
global (61)
    on left: 10 11, on right: 7
constructor (62)
    on left: 12 13, on right: 8
function (63)
    on left: 15 17 19 21, on right: 9
@1 (64)
    on left: 14, on right: 15
@2 (65)
    on left: 16, on right: 17
@3 (66)
    on left: 18, on right: 19
@4 (67)
    on left: 20, on right: 21
arg (68)
    on left: 22, on right: 23 24
args (69)
    on left: 23 24, on right: 24 26
args_e (70)
    on left: 25 26, on right: 12 13 15 17 19 21
variables (71)
    on left: 27 28, on right: 10 11 28 100 107
variable (72)
    on left: 29 30, on right: 27 28
accessmodif (73)
    on left: 31 32 33, on right: 10 13 15 17
type (74)
    on left: 34 35, on right: 10 11 15 19 22 74 100 107
noarraytype (75)
    on left: 36 37, on right: 34
basictype (76)
    on left: 38 39 40, on right: 37 44 45 46 75
arraytype (77)
    on left: 41 42 43 44 45 46, on right: 35
expr (78)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81,
    on right: 30 51 52 53 54 56 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 82 83 84 86 89 90 91 92 95 96 97 99 109
arrayindex (79)
    on left: 82 83 84, on right: 58 60 88 90
qualifiedname (80)
    on left: 85 86, on right: 57 58
qualnameorarray (81)
    on left: 87 88 89 90, on right: 55 56
expr_list (82)
    on left: 91 92, on right: 92 94
expr_list_e (83)
    on left: 93 94, on right: 57 58 59
statement (84)
    on left: 95 96 97 98 99 100 102 103, on right: 95 96 97 98 105
@5 (85)
    on left: 101, on right: 102
statements (86)
    on left: 104 105, on right: 12 13 15 17 19 21 102 105
variables_e (87)
    on left: 106 107, on right: 98
expr_e (88)
    on left: 108 109, on right: 98 103


state 0

    0 $accept: . root $end

    $default  reduce using rule 1 (root)

    root  go to state 1


state 1

    0 $accept: root . $end
    2 root: root . class

    $end   shift, and go to state 2
    CLASS  shift, and go to state 3

    class  go to state 4


state 2

    0 $accept: root $end .

    $default  accept


state 3

    3 class: CLASS . IDENT '{' members '}'
    4      | CLASS . IDENT ':' IDENT '{' members '}'

    IDENT  shift, and go to state 5


state 4

    2 root: root class .

    $default  reduce using rule 2 (root)


state 5

    3 class: CLASS IDENT . '{' members '}'
    4      | CLASS IDENT . ':' IDENT '{' members '}'

    '{'  shift, and go to state 6
    ':'  shift, and go to state 7


state 6

    3 class: CLASS IDENT '{' . members '}'

    $default  reduce using rule 5 (members)

    members  go to state 8


state 7

    4 class: CLASS IDENT ':' . IDENT '{' members '}'

    IDENT  shift, and go to state 9


state 8

    3 class: CLASS IDENT '{' members . '}'
    6 members: members . member

    IDENT    shift, and go to state 10
    BOOLEAN  shift, and go to state 11
    DOUBLE   shift, and go to state 12
    INT      shift, and go to state 13
    PRIVATE  shift, and go to state 14
    STATIC   shift, and go to state 15
    VOID     shift, and go to state 16
    '}'      shift, and go to state 17

    member       go to state 18
    global       go to state 19
    constructor  go to state 20
    function     go to state 21
    accessmodif  go to state 22
    type         go to state 23
    noarraytype  go to state 24
    basictype    go to state 25
    arraytype    go to state 26


state 9

    4 class: CLASS IDENT ':' IDENT . '{' members '}'

    '{'  shift, and go to state 27


state 10

   12 constructor: IDENT . '(' args_e ')' '{' statements '}'
   36 noarraytype: IDENT .
   41 arraytype: IDENT . '[' ']'
   42          | IDENT . '[' ',' ']'
   43          | IDENT . '[' ',' ',' ']'

    '('  shift, and go to state 28
    '['  shift, and go to state 29

    $default  reduce using rule 36 (noarraytype)


state 11

   38 basictype: BOOLEAN .

    $default  reduce using rule 38 (basictype)


state 12

   40 basictype: DOUBLE .

    $default  reduce using rule 40 (basictype)


state 13

   39 basictype: INT .

    $default  reduce using rule 39 (basictype)


state 14

   31 accessmodif: PRIVATE .
   33            | PRIVATE . STATIC

    STATIC  shift, and go to state 30

    $default  reduce using rule 31 (accessmodif)


state 15

   32 accessmodif: STATIC .

    $default  reduce using rule 32 (accessmodif)


state 16

   21 function: VOID . IDENT '(' @4 args_e ')' '{' statements '}'

    IDENT  shift, and go to state 31


state 17

    3 class: CLASS IDENT '{' members '}' .

    $default  reduce using rule 3 (class)


state 18

    6 members: members member .

    $default  reduce using rule 6 (members)


state 19

    7 member: global .

    $default  reduce using rule 7 (member)


state 20

    8 member: constructor .

    $default  reduce using rule 8 (member)


state 21

    9 member: function .

    $default  reduce using rule 9 (member)


state 22

   10 global: accessmodif . type variables ';'
   13 constructor: accessmodif . IDENT '(' args_e ')' '{' statements '}'
   15 function: accessmodif . type IDENT '(' @1 args_e ')' '{' statements '}'
   17         | accessmodif . VOID IDENT '(' @2 args_e ')' '{' statements '}'

    IDENT    shift, and go to state 32
    BOOLEAN  shift, and go to state 11
    DOUBLE   shift, and go to state 12
    INT      shift, and go to state 13
    VOID     shift, and go to state 33

    type         go to state 34
    noarraytype  go to state 24
    basictype    go to state 25
    arraytype    go to state 26


state 23

   11 global: type . variables ';'
   19 function: type . IDENT '(' @3 args_e ')' '{' statements '}'

    IDENT  shift, and go to state 35

    variables  go to state 36
    variable   go to state 37


state 24

   34 type: noarraytype .

    $default  reduce using rule 34 (type)


state 25

   37 noarraytype: basictype .
   44 arraytype: basictype . '[' ']'
   45          | basictype . '[' ',' ']'
   46          | basictype . '[' ',' ',' ']'

    '['  shift, and go to state 38

    $default  reduce using rule 37 (noarraytype)


state 26

   35 type: arraytype .

    $default  reduce using rule 35 (type)


state 27

    4 class: CLASS IDENT ':' IDENT '{' . members '}'

    $default  reduce using rule 5 (members)

    members  go to state 39


state 28

   12 constructor: IDENT '(' . args_e ')' '{' statements '}'

    IDENT    shift, and go to state 40
    BOOLEAN  shift, and go to state 11
    DOUBLE   shift, and go to state 12
    INT      shift, and go to state 13

    $default  reduce using rule 25 (args_e)

    arg          go to state 41
    args         go to state 42
    args_e       go to state 43
    type         go to state 44
    noarraytype  go to state 24
    basictype    go to state 25
    arraytype    go to state 26


state 29

   41 arraytype: IDENT '[' . ']'
   42          | IDENT '[' . ',' ']'
   43          | IDENT '[' . ',' ',' ']'

    ','  shift, and go to state 45
    ']'  shift, and go to state 46


state 30

   33 accessmodif: PRIVATE STATIC .

    $default  reduce using rule 33 (accessmodif)


state 31

   21 function: VOID IDENT . '(' @4 args_e ')' '{' statements '}'

    '('  shift, and go to state 47


state 32

   13 constructor: accessmodif IDENT . '(' args_e ')' '{' statements '}'
   36 noarraytype: IDENT .
   41 arraytype: IDENT . '[' ']'
   42          | IDENT . '[' ',' ']'
   43          | IDENT . '[' ',' ',' ']'

    '('  shift, and go to state 48
    '['  shift, and go to state 29

    $default  reduce using rule 36 (noarraytype)


state 33

   17 function: accessmodif VOID . IDENT '(' @2 args_e ')' '{' statements '}'

    IDENT  shift, and go to state 49


state 34

   10 global: accessmodif type . variables ';'
   15 function: accessmodif type . IDENT '(' @1 args_e ')' '{' statements '}'

    IDENT  shift, and go to state 50

    variables  go to state 51
    variable   go to state 37


state 35

   19 function: type IDENT . '(' @3 args_e ')' '{' statements '}'
   29 variable: IDENT .
   30         | IDENT . '=' expr

    '='  shift, and go to state 52
    '('  shift, and go to state 53

    $default  reduce using rule 29 (variable)


state 36

   11 global: type variables . ';'
   28 variables: variables . ',' variable

    ';'  shift, and go to state 54
    ','  shift, and go to state 55


state 37

   27 variables: variable .

    $default  reduce using rule 27 (variables)


state 38

   44 arraytype: basictype '[' . ']'
   45          | basictype '[' . ',' ']'
   46          | basictype '[' . ',' ',' ']'

    ','  shift, and go to state 56
    ']'  shift, and go to state 57


state 39

    4 class: CLASS IDENT ':' IDENT '{' members . '}'
    6 members: members . member

    IDENT    shift, and go to state 10
    BOOLEAN  shift, and go to state 11
    DOUBLE   shift, and go to state 12
    INT      shift, and go to state 13
    PRIVATE  shift, and go to state 14
    STATIC   shift, and go to state 15
    VOID     shift, and go to state 16
    '}'      shift, and go to state 58

    member       go to state 18
    global       go to state 19
    constructor  go to state 20
    function     go to state 21
    accessmodif  go to state 22
    type         go to state 23
    noarraytype  go to state 24
    basictype    go to state 25
    arraytype    go to state 26


state 40

   36 noarraytype: IDENT .
   41 arraytype: IDENT . '[' ']'
   42          | IDENT . '[' ',' ']'
   43          | IDENT . '[' ',' ',' ']'

    '['  shift, and go to state 29

    $default  reduce using rule 36 (noarraytype)


state 41

   23 args: arg .

    $default  reduce using rule 23 (args)


state 42

   24 args: args . ',' arg
   26 args_e: args .

    ','  shift, and go to state 59

    $default  reduce using rule 26 (args_e)


state 43

   12 constructor: IDENT '(' args_e . ')' '{' statements '}'

    ')'  shift, and go to state 60


state 44

   22 arg: type . IDENT

    IDENT  shift, and go to state 61


state 45

   42 arraytype: IDENT '[' ',' . ']'
   43          | IDENT '[' ',' . ',' ']'

    ','  shift, and go to state 62
    ']'  shift, and go to state 63


state 46

   41 arraytype: IDENT '[' ']' .

    $default  reduce using rule 41 (arraytype)


state 47

   21 function: VOID IDENT '(' . @4 args_e ')' '{' statements '}'

    $default  reduce using rule 20 (@4)

    @4  go to state 64


state 48

   13 constructor: accessmodif IDENT '(' . args_e ')' '{' statements '}'

    IDENT    shift, and go to state 40
    BOOLEAN  shift, and go to state 11
    DOUBLE   shift, and go to state 12
    INT      shift, and go to state 13

    $default  reduce using rule 25 (args_e)

    arg          go to state 41
    args         go to state 42
    args_e       go to state 65
    type         go to state 44
    noarraytype  go to state 24
    basictype    go to state 25
    arraytype    go to state 26


state 49

   17 function: accessmodif VOID IDENT . '(' @2 args_e ')' '{' statements '}'

    '('  shift, and go to state 66


state 50

   15 function: accessmodif type IDENT . '(' @1 args_e ')' '{' statements '}'
   29 variable: IDENT .
   30         | IDENT . '=' expr

    '='  shift, and go to state 52
    '('  shift, and go to state 67

    $default  reduce using rule 29 (variable)


state 51

   10 global: accessmodif type variables . ';'
   28 variables: variables . ',' variable

    ';'  shift, and go to state 68
    ','  shift, and go to state 55


state 52

   30 variable: IDENT '=' . expr

    IDENT      shift, and go to state 69
    INTEGER    shift, and go to state 70
    REAL       shift, and go to state 71
    FALSE      shift, and go to state 72
    TRUE       shift, and go to state 73
    NEW        shift, and go to state 74
    THIS       shift, and go to state 75
    NUL        shift, and go to state 76
    '+'        shift, and go to state 77
    '-'        shift, and go to state 78
    '!'        shift, and go to state 79
    DECREMENT  shift, and go to state 80
    INCREMENT  shift, and go to state 81
    '('        shift, and go to state 82

    expr             go to state 83
    qualifiedname    go to state 84
    qualnameorarray  go to state 85


state 53
